EXEOCOMMONS-5 documentation, lowered the requirements to java 8 and spring-boot 2.0.5