@@ -2,12 +2,14 @@ package pl.execon.fsp.mongo;
 
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.data.mongo.DataMongoTest;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import pl.execon.fsp.core.FilterInfo;
 import pl.execon.fsp.core.FspFilterOperator;
 import pl.execon.fsp.core.FspRequest;
@@ -18,11 +20,13 @@ import pl.execon.fsp.core.SortInfo;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+@ExtendWith({SpringExtension.class})
 @DataMongoTest
 @TestPropertySource(properties = "spring.mongodb.embedded.version=3.4.5")
 @EnableAutoConfiguration
@@ -34,7 +38,7 @@ class MongoFspTest {
 
     @BeforeAll
     static void beforeAll(@Autowired MongoTemplate mongoTemplate) {
-        List<FspTestObj> testObjs = List.of(
+        List<FspTestObj> testObjs = Arrays.asList(
                 new FspTestObj("1", "some text", 12, LocalDateTime.of(2022, 3, 15, 1, 1), new FspTestObj.InnerTestObj("abc")),
                 new FspTestObj("2", "a some lorem", 13, LocalDateTime.of(2022, 3, 18, 20, 20), new FspTestObj.InnerTestObj("def")),
                 new FspTestObj("3", "Lorem Ipsum has been the industry's", 25, LocalDateTime.of(2022, 2, 1, 15, 15), new FspTestObj.InnerTestObj("ghi")),
@@ -60,7 +64,7 @@ class MongoFspTest {
     void filterByTextEquals() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(new FilterInfo("text", Operation.EQUALS, "some text")))
+                .filter(Arrays.asList(new FilterInfo("text", Operation.EQUALS, "some text")))
                 .page(new PageInfo(0, 10))
                 .build();
 
@@ -82,7 +86,7 @@ class MongoFspTest {
     void filterByInnerObjectTextEquals() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(new FilterInfo("innerTestObj.innerText", Operation.EQUALS, "abc")))
+                .filter(Arrays.asList(new FilterInfo("innerTestObj.innerText", Operation.EQUALS, "abc")))
                 .page(new PageInfo(0, 10))
                 .build();
 
@@ -104,7 +108,7 @@ class MongoFspTest {
     void filterByTextNotEquals() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(new FilterInfo("text", Operation.NOT_EQUALS, "some text")))
+                .filter(Arrays.asList(new FilterInfo("text", Operation.NOT_EQUALS, "some text")))
                 .page(new PageInfo(0, 10))
                 .build();
 
@@ -122,7 +126,7 @@ class MongoFspTest {
     void filterByNumberNotIn() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(new FilterInfo("number", Operation.NOT_IN, List.of(12, 13))))
+                .filter(Arrays.asList(new FilterInfo("number", Operation.NOT_IN, Arrays.asList(12, 13))))
                 .page(new PageInfo(0, 10))
                 .build();
 
@@ -142,7 +146,7 @@ class MongoFspTest {
     void filterByTextContains() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(new FilterInfo("text", Operation.CONTAINS, "some")))
+                .filter(Arrays.asList(new FilterInfo("text", Operation.CONTAINS, "some")))
                 .page(new PageInfo(0, 10))
                 .build();
 
@@ -162,7 +166,7 @@ class MongoFspTest {
     void filterWithOrOperatorAndTextEquals() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(
+                .filter(Arrays.asList(
                         new FilterInfo("text", Operation.EQUALS, "some text", FspFilterOperator.OR),
                         new FilterInfo("text", Operation.EQUALS, "a some lorem", FspFilterOperator.OR)))
                 .page(new PageInfo(0, 10))
@@ -190,11 +194,11 @@ class MongoFspTest {
     void filterWithOrOperatorAndDateLessOrEqualsSoredAsc() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(
+                .filter(Arrays.asList(
                         new FilterInfo("date", Operation.LESS_OR_EQUALS, LocalDateTime.of(2022, 3, 18, 20, 20), FspFilterOperator.OR))
                 )
                 .page(new PageInfo(0, 10))
-                .sort(List.of(new SortInfo("date", SortInfo.Direction.ASC)))
+                .sort(Arrays.asList(new SortInfo("date", SortInfo.Direction.ASC)))
                 .build();
 
         //when
@@ -207,7 +211,7 @@ class MongoFspTest {
                 () -> assertEquals(LocalDateTime.of(1990, 4, 11, 21, 37), fspResult.getContent().get(0).getDate()),
                 () -> assertEquals(LocalDateTime.of(2022, 2, 1, 15, 15), fspResult.getContent().get(1).getDate()),
                 () -> assertEquals(LocalDateTime.of(2022, 3, 15, 1, 1), fspResult.getContent().get(2).getDate()),
-                () -> assertEquals( LocalDateTime.of(2022, 3, 18, 20, 20), fspResult.getContent().get(3).getDate())
+                () -> assertEquals(LocalDateTime.of(2022, 3, 18, 20, 20), fspResult.getContent().get(3).getDate())
         );
     }
 
@@ -215,11 +219,11 @@ class MongoFspTest {
     void filterWithOrOperatorAndDateGreaterOrEqualsSoredDesc() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(
+                .filter(Arrays.asList(
                         new FilterInfo("date", Operation.GREATER_OR_EQUALS, LocalDateTime.of(2022, 2, 1, 15, 15), FspFilterOperator.OR)
                 ))
                 .page(new PageInfo(0, 10))
-                .sort(List.of(new SortInfo("date", SortInfo.Direction.DESC)))
+                .sort(Arrays.asList(new SortInfo("date", SortInfo.Direction.DESC)))
                 .build();
 
         //when
@@ -239,7 +243,7 @@ class MongoFspTest {
     void filterWithIncorrectDateFormat() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(new FilterInfo("date", Operation.EQUALS, "12")))
+                .filter(Arrays.asList(new FilterInfo("date", Operation.EQUALS, "12")))
                 .page(new PageInfo(0, 10))
                 .build();
 
@@ -257,7 +261,7 @@ class MongoFspTest {
     void filterWithNumberIn() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(new FilterInfo("number", Operation.IN, List.of(12, 13))))
+                .filter(Arrays.asList(new FilterInfo("number", Operation.IN, Arrays.asList(12, 13))))
                 .page(new PageInfo(0, 10))
                 .build();
 
@@ -277,11 +281,11 @@ class MongoFspTest {
     void filterWithOrOperatorAndDateLessThanSoredAsc() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(
+                .filter(Arrays.asList(
                         new FilterInfo("date", Operation.LESS_THAN, LocalDateTime.of(2022, 3, 18, 20, 20), FspFilterOperator.OR))
                 )
                 .page(new PageInfo(0, 10))
-                .sort(List.of(new SortInfo("date", SortInfo.Direction.ASC)))
+                .sort(Arrays.asList(new SortInfo("date", SortInfo.Direction.ASC)))
                 .build();
 
         //when
@@ -301,11 +305,11 @@ class MongoFspTest {
     void filterWithOrOperatorAndDateGreaterThanSoredDesc() {
         //given
         FspRequest fspRequest = FspRequest.builder()
-                .filter(List.of(
+                .filter(Arrays.asList(
                         new FilterInfo("date", Operation.GREATER_THAN, LocalDate.of(2022, 3, 15), FspFilterOperator.OR)
                 ))
                 .page(new PageInfo(0, 10))
-                .sort(List.of(new SortInfo("date", SortInfo.Direction.DESC)))
+                .sort(Arrays.asList(new SortInfo("date", SortInfo.Direction.DESC)))
                 .build();
 
         //when
